--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~15.4.6",
     "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^15.0.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-secure-store": "^13.0.1",
