--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-native": "0.73.6",
     "react-native-collapsible": "^1.6.1",
     "react-native-country-picker-modal": "^2.0.0",
